// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Probar la clase de Citas Actualizar Cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:40",
      "id": 1750165032931,
      "mascota": "Otto",
      "propietario": "Harold",
      "sintomas": "Solo duerme",
      "telefono": "123456789",
    },
  ],
}
`;

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": [
    {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1750165032931,
      "mascota": "Hook",
      "propietario": "Harold",
      "sintomas": "Solo duerme",
      "telefono": "123456789",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": [],
}
`;
